# hexo-bot

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  DEPLOY_NOTES.md  LICENSE  PERF_DIAG.md  README.md
configs/: hexfield_eq_main_2.toml  hexfield_eq_main_5.toml  hexfield_main_7.toml  hexfield_smoke.toml  hexfield_smoke_tiny.toml  shrimp_main_7.toml  shrimp_smoke.toml  shrimp_smoke_tiny.toml
docs/: ARCHITECTURE.md  DERIVATION_D6_EQUIVARIANT_ATTENTION.md  HEXFIELD.md  HEXFIELD_EQ_EXPLAINER.md  SHRIMP.md  SPEC_RAYTAP_CONV.md  hexfield_blueprint.md  intro_to_hexo.md  shrimp_blueprint.md
models/: MODEL_CARD.md  hexfield_main7_full.pt  hexfield_main7_infer.pt  shrimp_main7_full.pt  shrimp_main7_infer.pt
scripts/: bench_hexfield_eq_main5_serve.py  bootstrap_from_corpus.py  build_native.sh  dashboard.sh  export_eq_learn_data.py  export_hexfield_eq_infer.py  export_weights.py  fetch_corpus.py  launch_training.sh  parity_hexfield_eq_main5_serve.py  prefit.py  prefit_launch.sh  supervise.sh
tests/: _hexfield_eq_raytap_t8_child.py  _hexfield_eq_v2_child.py  conftest.py  hexfield_eval_kit.py  hexfield_testkit.py  shrimp_eval_kit.py  shrimp_testkit.py  test_debug_infer.py  test_frontend_training_artifacts.py  test_frontend_training_epoch.py  test_frontend_training_live.py  test_hexfield_continuous_parity.py  test_hexfield_divergence_properties.py  test_hexfield_durability.py  test_hexfield_eq_checkpoint_meta.py  test_hexfield_eq_derivation.py  test_hexfield_eq_equivariance.py  test_hexfield_eq_feature_v2.py  test_hexfield_eq_orbit_bias.py  test_hexfield_eq_perm_fold.py  (+53 more)
(+156 files in other folders)
